--- a/games.css
+++ b/games.css
@@ -1,5 +1,5 @@
 body {
-    width: 60%;
+    width: 80%;
     margin: 0 auto;
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -9,15 +9,22 @@ body {
     border: 2px black solid;
     border-radius: 20px;
     height: 325vh;
-    padding: 0 1em;
+    padding: 1em 1em;
     background-color: #b8b8b8;
+}
+
+.container-head {
+    background-color: aliceblue;
+    border: 2px black solid;
+    padding-bottom: 2em;
+    border-radius: 20px;
 }
 
 .grid {
     margin-top: 1em;
     display: grid;
     grid-template: 
-    "1 2 3";
+    "1 2 3 4";
     grid-row-gap: 1em;
     align-items: center;
 }
@@ -66,4 +73,11 @@ hr {
     margin-top: 1em;
     background-color: black;
     height: 0.05em;
+}
+
+
+@media (max-width: 600px) {
+    .grid {
+        display: block;
+    }
 }
